Build and post product icon to product store