@@ -44,6 +44,10 @@
 	</pluginRepositories>
 
 	<properties>
+		<images-folder>target/main/images</images-folder>
+		<!-- Runtime dependencies -->
+
+		<!-- Version numbers updated 02 Oct 2019 -->
 		<!-- Runtime dependencies -->
 		<!--java.version defined in parent pom -->
 		<javafx.version>13</javafx.version>
@@ -82,9 +86,68 @@
 				<!-- This configuration allows the JUnit test runner to find the unit tests -->
 				<configuration>
 					<argLine>
+						--add-opens=com.avereon.zenna/com.avereon.zenna=ALL-UNNAMED
 						--add-opens=com.avereon.zenna/com.avereon.zenna.task=ALL-UNNAMED
 					</argLine>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>com.avereon</groupId>
+				<artifactId>cameo</artifactId>
+				<version>2.5-SNAPSHOT</version>
+				<executions>
+					<execution>
+						<id>render-images</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>render</goal>
+						</goals>
+						<configuration>
+							<images>
+								<image>
+									<class>com.avereon.rossa.icon.ZinniaIcon</class>
+									<target>${images-folder}/zenna.png</target>
+								</image>
+							</images>
+							<icons>
+								<icon>
+									<target>${images-folder}/zenna.ico</target>
+									<images>
+										<image>
+											<class>com.avereon.rossa.icon.ZinniaIcon</class>
+											<size>16</size>
+										</image>
+										<image>
+											<class>com.avereon.rossa.icon.ZinniaIcon</class>
+											<size>24</size>
+										</image>
+										<image>
+											<class>com.avereon.rossa.icon.ZinniaIcon</class>
+											<size>32</size>
+										</image>
+										<image>
+											<class>com.avereon.rossa.icon.ZinniaIcon</class>
+											<size>48</size>
+										</image>
+										<image>
+											<class>com.avereon.rossa.icon.ZinniaIcon</class>
+											<size>64</size>
+										</image>
+										<image>
+											<class>com.avereon.rossa.icon.ZinniaIcon</class>
+											<size>96</size>
+										</image>
+										<image>
+											<class>com.avereon.rossa.icon.ZinniaIcon</class>
+											<size>128</size>
+										</image>
+									</images>
+								</icon>
+							</icons>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 
 			<plugin>
